// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`if user is logged in renders create group button if user has no groups 1`] = `
<body
  style=""
>
  <div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-69 makeStyles-drawerPermanent-71"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-70 makeStyles-drawerPaperPermanent-72 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root-77 makeStyles-container-75"
        >
          <div
            class="MuiContainer-root makeStyles-body-74 MuiContainer-maxWidthLg"
          >
            <div
              class="MuiBox-root MuiBox-root-81 makeStyles-root-78"
            >
              <div
                class="MuiBox-root MuiBox-root-82 makeStyles-btn-79"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    drawer.createGroup
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <div
                class="MuiBox-root MuiBox-root-83 makeStyles-cars-80"
              >
                <div
                  class="MuiGrid-root makeStyles-root-84 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-85 makeStyles-footer-73"
          >
            <div
              class="MuiPaper-root makeStyles-footer-73 makeStyles-paper-86 MuiPaper-elevation6"
            >
              <div
                class="MuiContainer-root makeStyles-container-87 MuiContainer-maxWidthLg"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-evenly"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                    >
                      privacyPolicy.title
                    </button>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                    >
                      imprint.title
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`if user is logged in renders list of cars correctly if a group is selected 1`] = `
<body
  style=""
>
  <div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-110 makeStyles-drawerPermanent-112"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-111 makeStyles-drawerPaperPermanent-113 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root-118 makeStyles-container-116"
        >
          <div
            class="MuiContainer-root makeStyles-body-115 MuiContainer-maxWidthLg"
          >
            <div
              class="MuiBox-root MuiBox-root-122 makeStyles-root-119"
            >
              <div
                class="MuiBox-root MuiBox-root-123 makeStyles-btn-120"
              >
                <div
                  class="MuiBox-root MuiBox-root-125"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Group
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-126 makeStyles-cars-121"
              >
                <div
                  class="MuiGrid-root makeStyles-root-127 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiPaper-root MuiCard-root MuiPaper-outlined MuiPaper-rounded"
                    >
                      <div
                        class="MuiCardHeader-root"
                      >
                        <div
                          class="MuiCardHeader-avatar"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                            color="Red"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiCardHeader-content"
                        >
                          <span
                            class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                          >
                            <p
                              class="MuiTypography-root MuiTypography-body1"
                            >
                              Car1
                            </p>
                            <div
                              class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-128"
                            >
                              <span
                                class="MuiChip-label MuiChip-labelSmall"
                              >
                                misc.available
                              </span>
                            </div>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiPaper-root MuiCard-root MuiPaper-outlined MuiPaper-rounded"
                    >
                      <div
                        class="MuiCardHeader-root"
                      >
                        <div
                          class="MuiCardHeader-avatar"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                            color="Green"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiCardHeader-content"
                        >
                          <span
                            class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                          >
                            <p
                              class="MuiTypography-root MuiTypography-body1"
                            >
                              Car2
                            </p>
                            <p
                              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
                            >
                              drawer.cars.drivenBy
                            </p>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-129 makeStyles-footer-114"
          >
            <div
              class="MuiPaper-root makeStyles-footer-114 makeStyles-paper-130 MuiPaper-elevation6"
            >
              <div
                class="MuiContainer-root makeStyles-container-131 MuiContainer-maxWidthLg"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-evenly"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                    >
                      privacyPolicy.title
                    </button>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                    >
                      imprint.title
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`if user is logged in renders select group button if user has at least one group and none is selected 1`] = `
<body
  style=""
>
  <div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-88 makeStyles-drawerPermanent-90"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-89 makeStyles-drawerPaperPermanent-91 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root-96 makeStyles-container-94"
        >
          <div
            class="MuiContainer-root makeStyles-body-93 MuiContainer-maxWidthLg"
          >
            <div
              class="MuiBox-root MuiBox-root-100 makeStyles-root-97"
            >
              <div
                class="MuiBox-root MuiBox-root-101 makeStyles-btn-98"
              >
                <div
                  class="MuiBox-root MuiBox-root-103"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      drawer.groupMenu.noSelection
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-104 makeStyles-cars-99"
              >
                <div
                  class="MuiGrid-root makeStyles-root-105 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-106 makeStyles-footer-92"
          >
            <div
              class="MuiPaper-root makeStyles-footer-92 makeStyles-paper-107 MuiPaper-elevation6"
            >
              <div
                class="MuiContainer-root makeStyles-container-108 MuiContainer-maxWidthLg"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-evenly"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                    >
                      privacyPolicy.title
                    </button>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                    >
                      imprint.title
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders NotLoggedIn component if user is not logged in 1`] = `
<body
  style=""
>
  <div />
</body>
`;

exports[`renders and matches snapshot with not open and not permanent without crashing 1`] = `
<body
  style=""
>
  <div />
</body>
`;

exports[`renders and matches snapshot with not open and permanent without crashing 1`] = `
<div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-37 makeStyles-drawerPermanent-39"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-38 makeStyles-drawerPaperPermanent-40 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
    >
      <div
        class="MuiBox-root MuiBox-root-45 makeStyles-container-43"
      >
        <div
          class="MuiBox-root MuiBox-root-48 makeStyles-fullHeight-47 makeStyles-center-46"
        >
          <div
            class="MuiBox-root MuiBox-root-49 makeStyles-center-46"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.title
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.message
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-50 makeStyles-footer-41"
        >
          <div
            class="MuiPaper-root makeStyles-footer-41 makeStyles-paper-51 MuiPaper-elevation6"
          >
            <div
              class="MuiContainer-root makeStyles-container-52 MuiContainer-maxWidthLg"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-evenly"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    privacyPolicy.title
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    imprint.title
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders and matches snapshot with open and not permanent without crashing 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDrawer-root MuiDrawer-modal makeStyles-drawer-1"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-2 MuiDrawer-paperAnchorRight MuiPaper-elevation16"
      tabindex="-1"
    >
      <div
        class="MuiBox-root MuiBox-root-9 makeStyles-container-7"
      >
        <div
          class="MuiBox-root MuiBox-root-10 makeStyles-header-8"
        >
          <div
            class="MuiBox-root MuiBox-root-13 makeStyles-root-12"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root makeStyles-closeButton-11"
              data-testid="close"
              id="drawer-close"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-16 makeStyles-fullHeight-15 makeStyles-center-14"
        >
          <div
            class="MuiBox-root MuiBox-root-17 makeStyles-center-14"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.title
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.message
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-18 makeStyles-footer-5"
        >
          <div
            class="MuiPaper-root makeStyles-footer-5 makeStyles-paper-19 MuiPaper-elevation6"
          >
            <div
              class="MuiContainer-root makeStyles-container-20 MuiContainer-maxWidthLg"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-evenly"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    privacyPolicy.title
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    imprint.title
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`renders and matches snapshot with open and permanent without crashing 1`] = `
<div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-21 makeStyles-drawerPermanent-23"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-22 makeStyles-drawerPaperPermanent-24 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
    >
      <div
        class="MuiBox-root MuiBox-root-29 makeStyles-container-27"
      >
        <div
          class="MuiBox-root MuiBox-root-32 makeStyles-fullHeight-31 makeStyles-center-30"
        >
          <div
            class="MuiBox-root MuiBox-root-33 makeStyles-center-30"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.title
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.message
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-34 makeStyles-footer-25"
        >
          <div
            class="MuiPaper-root makeStyles-footer-25 makeStyles-paper-35 MuiPaper-elevation6"
          >
            <div
              class="MuiContainer-root makeStyles-container-36 MuiContainer-maxWidthLg"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-evenly"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    privacyPolicy.title
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    imprint.title
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
